--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -2,6 +2,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
 
 .form__label {
@@ -29,12 +30,32 @@
   }
 }
 
+.form__field-wrapper {
+  overflow: hidden;
+  width: calc(100% - 21rem);
+  margin-right: 3rem;
+  border-radius: 3rem;
+
+  @media (min-width: $stop-scaling) {
+    width: calc(100% - 210px);
+    margin-right: 30px;
+  }
+
+  @media (max-width: $tablet) and (orientation: landscape) {
+    width: calc(100% - 9rem);
+  }
+
+  @media (max-width: $mobile) and (orientation: landscape), (orientation: portrait) {
+    width: calc(100% - 5rem);
+    margin-right: 1rem;
+  }
+}
+
 .form__field {
   flex: none;
-  margin-right: 3rem;
   padding: 0 5.6rem;
   height: 6rem;
-  width: calc(100% - 21rem);
+  width: 100%;
   text-transform: uppercase;
   font: inherit;
   font-size: 2.4rem;
@@ -43,44 +64,41 @@
   border: 0;
   border-radius: 3rem;
   outline: none;
+  transform: translateX(92%);
+  transition: transform 0.3s ease;
 
   &:focus {
     border: 1px solid $c-purple;
   }
 
   @media (min-width: $stop-scaling) {
-    margin-right: 30px;
     padding: 0 56px;
     height: 60px;
-    width: calc(100% - 210px);
     font-size: 24px;
     border-radius: 30px;
   }
 
   @media (orientation: portrait) {
-    margin-right: 1rem;
     padding: 0 2.5rem;
-    width: calc(100% - 5rem);
     height: 4rem;
     font-size: 1.6rem;
-  }
-
-  @media (max-width: $tablet) and (orientation: landscape) {
-    width: calc(100% - 9rem);
+    transform: translateX(82%);
   }
 
   @media (max-width: $mobile) and (orientation: landscape) {
-    margin-right: 1rem;
     padding: 0 2.5rem;
-    width: calc(100% - 5rem);
     height: 4rem;
     font-size: 1.6rem;
   }
 }
 
-.form__button {
-  flex-grow: 1;
+.screen--game.active {
+  .form__field {
+    transform: translateX(0);
+  }
+}
 
+.form__button {
   @media (orientation: portrait) {
     position: relative;
     flex: none;
