--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -93,6 +93,7 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
+  animation: fadeInBottom 0.5s ease;
 
   @media (min-width: $stop-scaling) {
     width: 509px;
