--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -241,6 +241,7 @@
     display: block;
     color: inherit;
     padding: 0 0.5em 0.5em;
+    transition: color 0.3s ease;
 
     &::after {
       content: "";
@@ -249,8 +250,11 @@
       width: 100%;
       height: 2px;
       background-color: $c-light;
-      display: none;
+      display: block;
       left: 0;
+      transform: scaleX(0);
+      transform-origin: right;
+      transition: transform 0.3s ease, background-color 0.3s ease;
 
       @media (max-width: $tablet) and (orientation: portrait) {
         left: 0;
@@ -267,7 +271,7 @@
 
     &.active {
       &::after {
-        display: block;
+        transform: scaleX(1);
       }
     }
 
@@ -279,6 +283,8 @@
       &::after {
         opacity: 1;
         background-color: $c-purple;
+        transform: scaleX(1);
+        transform-origin: left;
       }
     }
   }
