--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -125,6 +125,20 @@
   }
 }
 
+.swiper-slide-active {
+  .slider__item-text {
+    animation: fadeInRight 0.5s ease 0.4s backwards;
+  }
+}
+
+@media (orientation: landscape) {
+  .swiper-slide-next {
+    .slider__item-text {
+      animation: fadeInRight 0.5s ease 0.6s backwards;
+    }
+  }
+}
+
 .slider__controls {
   position: absolute;
   bottom: 2.8rem;
