add animation of the appearance of the header

--- a/source/scss/blocks/page-header.scss
+++ b/source/scss/blocks/page-header.scss
@@ -35,6 +35,9 @@
   padding: 1rem 0;
   width: 10rem;
   color: $c-light;
+  opacity: 0;
+  transform: translateX(-1.5rem);
+  transition: opacity 0.3s cubic-bezier(0.18, 0.68, 0.45, 0.95), transform 0.3s cubic-bezier(0.18, 0.68, 0.45, 0.95);
 
   @media (min-width: $stop-scaling) {
     top: -5px;
@@ -177,6 +180,8 @@
   font-size: 1.2rem;
   line-height: 1.0418;
   color: $c-light;
+  opacity: 0;
+  transition: opacity 0.3s cubic-bezier(0.18, 0.68, 0.45, 0.95);
 
   @media (min-width: $stop-scaling) {
     font-size: 12px;
@@ -287,6 +292,17 @@
         transform-origin: left;
       }
     }
+  }
+}
+
+.body.page-loaded {
+  .page-header__logo {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  .page-header__menu {
+    opacity: 1;
   }
 }
 
