--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -46,6 +46,8 @@
   color: $c-dark;
   background-color: $c-light;
   z-index: 1;
+  transform: translateY(100%);
+  transition: transform 0.3s cubic-bezier(0.18, 0.68, 0.45, 0.95);
 
   @media (max-width: $tablet) and (orientation: portrait) {
     width: 3.5rem;
@@ -67,6 +69,12 @@
       width: 100%;
       height: 16rem;
     }
+  }
+}
+
+.body.page-loaded {
+  .screen__footer {
+    transform: translateY(0);
   }
 }
 
