--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -38,6 +38,7 @@
     background-color: $c-light;
     border: 2px solid $c-light;
     z-index: -1;
+    transform: scale(1);
     transition: transform 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
     will-change: transform;
   }
@@ -80,6 +81,22 @@
       background-color: $c-purple;
       border-color: $c-purple;
     }
+  }
+}
+
+@keyframes appearance {
+  from {
+    transform: scale(0);
+  }
+
+  to {
+    transform: scale(1);
+  }
+}
+
+.body.page-loaded {
+  .social-block__toggler::before {
+    animation: appearance 0.3s cubic-bezier(0.18, 0.68, 0.45, 0.95);
   }
 }
 
