make the transitions into a variable

--- a/source/scss/blocks/form.scss
+++ b/source/scss/blocks/form.scss
@@ -65,7 +65,7 @@
   border-radius: 3rem;
   outline: none;
   transform: translateX(92%);
-  transition: transform 0.3s ease;
+  transition: transform $ease-medium;
 
   &:focus {
     border: 1px solid $c-purple;
