--- a/source/scss/blocks/social-block.scss
+++ b/source/scss/blocks/social-block.scss
@@ -19,7 +19,7 @@
   height: 4rem;
   color: $c-dark;
   border-radius: 50%;
-  transition: color 0.3s ease;
+  transition: color $ease-medium;
 
   @media (max-width: $tablet) and (orientation: portrait) {
     display: none;
@@ -39,7 +39,7 @@
     border: 2px solid $c-light;
     z-index: -1;
     transform: scale(1);
-    transition: transform 0.3s ease, background-color 0.3s ease, border-color 0.3s ease;
+    transition: transform $ease-medium, background-color $ease-medium, border-color $ease-medium;
     will-change: transform;
   }
 
@@ -96,7 +96,7 @@
 
 .body.page-loaded {
   .social-block__toggler::before {
-    animation: appearance 0.3s cubic-bezier(0.18, 0.68, 0.45, 0.95);
+    animation: appearance $ease-out-quint-medium;
   }
 }
 
@@ -119,7 +119,7 @@
   margin-top: 1.5rem;
   opacity: 0;
   pointer-events: none;
-  transition: opacity 0.3s ease;
+  transition: opacity $ease-medium;
 
   @media (min-width: $stop-scaling) {
     margin-top: 15px;
@@ -247,7 +247,7 @@
 
   &--fb {
     .social-block--active & {
-      transition: color 0.3s ease 0s, opacity 0.3s ease 0s, transform 0.3s ease 0s;
+      transition: color $ease-medium 0s, opacity $ease-medium 0s, transform $ease-medium 0s;
     }
 
     svg {
@@ -263,7 +263,7 @@
 
   &--insta {
     .social-block--active & {
-      transition: color 0.3s ease 0s, opacity 0.3s ease 0.1s, transform 0.3s ease 0.1s;
+      transition: color $ease-medium 0s, opacity $ease-medium 0.1s, transform $ease-medium 0.1s;
     }
 
     svg {
@@ -279,7 +279,7 @@
 
   &--vk {
     .social-block--active & {
-      transition: color 0.3s ease 0s, opacity 0.3s ease 0.2s, transform 0.3s ease 0.2s;
+      transition: color $ease-medium 0s, opacity $ease-medium 0.2s, transform $ease-medium 0.2s;
     }
 
     svg {
