--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -47,7 +47,7 @@
   background-color: $c-light;
   z-index: 1;
   transform: translateY(100%);
-  transition: transform 0.3s cubic-bezier(0.18, 0.68, 0.45, 0.95);
+  transition: transform $ease-out-quint-medium;
 
   @media (max-width: $tablet) and (orientation: portrait) {
     width: 3.5rem;
