--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -127,14 +127,14 @@
 
 .swiper-slide-active {
   .slider__item-text {
-    animation: fadeInRight 0.5s ease 0.4s backwards;
+    animation: fadeInRight $ease-long 0.4s backwards;
   }
 }
 
 @media (orientation: landscape) {
   .swiper-slide-next {
     .slider__item-text {
-      animation: fadeInRight 0.5s ease 0.6s backwards;
+      animation: fadeInRight $ease-long 0.6s backwards;
     }
   }
 }
