--- a/source/scss/blocks/screen.scss
+++ b/source/scss/blocks/screen.scss
@@ -1,4 +1,7 @@
 .screen {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+
   position: relative;
   display: flex;
   flex-direction: column;
@@ -7,7 +10,7 @@
   overflow: hidden;
 
   &--hidden {
-    display: none;
+    visibility: hidden;
   }
 
   @media (max-width: $tablet) and (orientation: portrait) {
@@ -303,6 +306,14 @@
   background-size: cover;
   background-position: center;
 
+  &.screen--hidden {
+    transition: visibility 0s 0.3s;
+
+    .screen--intro:not(.screen--hidden) ~ & {
+      transition-delay: 0s;
+    }
+  }
+
   @media (orientation: portrait) {
     background-size: auto calc(100vh - 13.8rem), 100% 25rem;
     background-position: top center, bottom center;
@@ -310,7 +321,29 @@
 }
 
 .screen--prizes {
-  background-color: $c-dark;
+  .screen-background {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+
+    background-color: $c-dark;
+  }
+
+  .screen--story.screen--hidden ~ & {
+    .screen-background {
+      animation: slidingBottom $ease-medium both;
+    }
+
+    .screen__wrapper {
+      animation: fadeIn 0s 0.3s backwards;
+    }
+
+    .screen__footer {
+      animation: slidingBottom $ease-medium both;
+    }
+  }
 }
 
 .screen--game {
