--- a/source/scss/general/keyframes.scss
+++ b/source/scss/general/keyframes.scss
@@ -1,3 +1,13 @@
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
 @keyframes fadeInRight {
   from {
     opacity: 0;
@@ -29,5 +39,15 @@
 
   to {
     transform: scale(1);
+  }
+}
+
+@keyframes slidingBottom {
+  from {
+    transform: translateY(100%);
+  }
+
+  to {
+    transform: translateY(0);
   }
 }
