--- a/source/scss/blocks/btn.scss
+++ b/source/scss/blocks/btn.scss
@@ -1,6 +1,9 @@
 .btn {
   @include btn-reset;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   padding: 1.5rem 2.9rem;
   text-transform: uppercase;
   text-align: center;
@@ -10,6 +13,8 @@
   line-height: 3rem;
   color: $c-dark;
   letter-spacing: -0.04em;
+  border-radius: 3.5rem;
+  overflow: hidden;
 
   @media (min-width: $stop-scaling) {
     padding: 15px 29px;
@@ -29,8 +34,8 @@
   }
 
   &::before {
-    @include center;
     content: "";
+    position: absolute;
     width: 100%;
     height: 100%;
     background-color: $c-light;
