--- a/source/scss/blocks/rules.scss
+++ b/source/scss/blocks/rules.scss
@@ -160,6 +160,16 @@
     line-height: 5rem;
     text-align: center;
 
+    color: transparent;
+    transform: scale(0);
+
+    .screen--rules.active & {
+      animation-name: rules-item-before-appear;
+      animation-duration: $duration-long;
+      animation-timing-function: $ease-out-back;
+      animation-fill-mode: forwards;
+    }
+
     @media (max-width: $tablet) and (orientation: portrait) {
       top: 1rem;
       width: 2.5rem;
@@ -179,10 +189,53 @@
 
   p {
     margin: 0;
+    opacity: 0;
+    transform: translateX(1rem);
+
+    .screen--rules.active & {
+      animation-name: rules-item-text-appear;
+      animation-duration: $duration-long;
+      animation-fill-mode: forwards;
+    }
 
     @media (max-width: $tablet) and (orientation: portrait) {
       min-height: calc(1.4rem * 2.2);
     }
+  }
+
+  &:nth-child(2) {
+    &::before,
+    p {
+      animation-delay: 0.2s;
+    }
+  }
+
+  &:nth-child(3) {
+    &::before,
+    p {
+      animation-delay: 0.4s;
+    }
+  }
+
+  &:nth-child(4) {
+    &::before,
+    p {
+      animation-delay: 0.6s;
+    }
+  }
+}
+
+@keyframes rules-item-before-appear {
+  to {
+    color: inherit;
+    transform: scale(1);
+  }
+}
+
+@keyframes rules-item-text-appear {
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
 
@@ -190,6 +243,32 @@
   position: absolute;
   bottom: 6rem;
   right: 5.6rem;
+  color: transparent;
+  visibility: hidden;
+
+  &::before {
+    transform: translateX(12rem);
+
+    @media (max-width: $mobile) {
+      transform: translateX(26rem);
+    }
+  }
+
+  .screen--rules.active & {
+    animation-name: rules-link-appear;
+    animation-duration: $duration-short;
+    animation-delay: 0.7s;
+    animation-timing-function: $ease-in-cubic;
+    animation-fill-mode: forwards;
+
+    &::before {
+      animation-name: rules-link-background-appear;
+      animation-duration: $duration-long;
+      animation-delay: 0.7s;
+      animation-timing-function: $ease-out-cubic;
+      animation-fill-mode: forwards;
+    }
+  }
 
   @media (min-width: $stop-scaling) {
     bottom: 60px;
@@ -209,5 +288,22 @@
   @media (max-width: $mobile) and (orientation: landscape) {
     bottom: 2rem;
     right: 1.5rem;
+  }
+}
+
+@keyframes rules-link-appear {
+  from {
+    visibility: visible;
+  }
+
+  to {
+    color: $c-dark;
+    visibility: visible;
+  }
+}
+
+@keyframes rules-link-background-appear {
+  to {
+    transform: translateX(0);
   }
 }
