--- a/source/scss/general/variables.scss
+++ b/source/scss/general/variables.scss
@@ -20,8 +20,20 @@ $retina-dppx: 1.5dppx;
 
 $index: 1.38871;
 
+// easing
+$ease-in-cubic: cubic-bezier(0.32, 0, 0.67, 0);
+$ease-out-cubic: cubic-bezier(0.33, 1, 0.68, 1);
+$ease-out-quint: cubic-bezier(0.18, 0.68, 0.45, 0.95);
+$ease-out-back: cubic-bezier(0.34, 1.56, 0.64, 1);
+
+// duration
+$duration-short: 0.2s;
+$duration-medium: 0.3s;
+$duration-long: 0.4s;
+$duration-extra-long: 0.5s;
+
 // easing and duration
-$ease-medium: 0.3s ease;
-$ease-long: 0.5s ease;
-$ease-out-quint-medium: 0.3s cubic-bezier(0.18, 0.68, 0.45, 0.95);
-$ease-out-back-medium: 0.3s cubic-bezier(0.34, 1.56, 0.64, 1);
+$ease-medium: $duration-medium ease;
+$ease-long: $duration-extra-long ease;
+$ease-out-quint-medium: $duration-medium $ease-out-quint;
+$ease-out-back-medium: $duration-medium $ease-out-back;
