--- a/source/scss/blocks/slider.scss
+++ b/source/scss/blocks/slider.scss
@@ -88,6 +88,12 @@
     margin-left: -2.5rem;
     font-size: 3rem;
   }
+
+  .slide-text-bottom-letter {
+    .screen--story.active & {
+      transform: translate3d(0, 0, 0);
+    }
+  }
 }
 
 .slider__item-text {
