--- a/source/scss/blocks/intro.scss
+++ b/source/scss/blocks/intro.scss
@@ -99,7 +99,7 @@
   text-transform: uppercase;
   font-size: 2.4rem;
   line-height: 1.27;
-  animation: fadeInBottom $ease-long;
+  opacity: 0;
 
   @media (min-width: $stop-scaling) {
     width: 509px;
@@ -139,6 +139,12 @@
       width: 1.1rem;
       height: 1.1rem;
     }
+  }
+}
+
+.screen--intro.active {
+  .intro__message {
+    animation: fadeInBottom $ease-long forwards;
   }
 }
 
