--- a/source/scss/blocks/result.scss
+++ b/source/scss/blocks/result.scss
@@ -197,6 +197,25 @@
   }
 }
 
+.result___title-image {
+  &_victory {
+    transform: scale(1.1);
+    transition: transform 0.6s ease;
+
+    .screen--result.screen--show & {
+      transform: scale(1);
+    }
+  }
+
+  &_loss {
+    transition: transform 0.01s;
+
+    .screen--result.screen--show & {
+      transform: scale(1);
+    }
+  }
+}
+
 .result__text {
   margin-bottom: 2rem;
   text-align: center;
@@ -372,9 +391,9 @@
 
 .result--negative {
   .result__title {
-    margin-top: 9.5rem;
+    margin-top: 4.5rem;
     width: 66.5rem;
-    height: 11.3rem;
+    height: 28rem;
 
     @media (min-width: $stop-scaling) {
       margin-top: 95px;
